updated html, added css, and got the ajax requests working in the script file

--- a/index.html
+++ b/index.html
@@ -100,50 +100,50 @@
                 <div class="col">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
-                          <h5 id="day1Date" class="card-title mb-4"></h5>
-                          <h6 id="day1Icon" class="card-subtitle mb-4"><i class="fas fa-cloud-moon-rain"></i></h6>
-                          <h6 id="day1Temp" class="card-subtitle mb-4">Temp: </h6>
-                          <h6 id="day1Humi" class="card-subtitle mb-4">Humidity: </h6>
+                          <h6 id="day1Date" class="card-title mb-4"></h6>
+                          <p id="day1Icon" class="card-subtitle mb-4"></p>
+                          <p id="day1Temp" class="card-subtitle mb-4">Temp: </p>
+                          <p id="day1Humi" class="card-subtitle mb-4">Humidity: </p>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
-                          <h5 id="day2Date" class="card-title mb-4"></h5>
-                          <h6 id="day2Icon" class="card-subtitle mb-4"><i class="fas fa-cloud-moon-rain"></i></h6>
-                          <h6 id="day2Temp" class="card-subtitle mb-4">Temp: </h6>
-                          <h6 id="day2Humi" class="card-subtitle mb-4">Humidity: </h6>
+                          <h6 id="day2Date" class="card-title mb-4"></h6>
+                          <p id="day2Icon" class="card-subtitle mb-4"></p>
+                          <p id="day2Temp" class="card-subtitle mb-4">Temp: </p>
+                          <p id="day2Humi" class="card-subtitle mb-4">Humidity: </p>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
-                          <h5 id="day3Date" class="card-title mb-4"></h5>
-                          <h6 id="day3Icon" class="card-subtitle mb-4"><i class="fas fa-cloud-moon-rain"></i></h6>
-                          <h6 id="day3Temp" class="card-subtitle mb-4">Temp: </h6>
-                          <h6 id="day3Humi" class="card-subtitle mb-4">Humidity: </h6>
+                          <h6 id="day3Date" class="card-title mb-4"></h6>
+                          <p id="day3Icon" class="card-subtitle mb-4"></p>
+                          <p id="day3Temp" class="card-subtitle mb-4">Temp: </p>
+                          <p id="day3Humi" class="card-subtitle mb-4">Humidity: </p>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
-                          <h5 id="day4Date" class="card-title mb-4"></h5>
-                          <h6 id="day4Icon" class="card-subtitle mb-4"><i class="fas fa-cloud-moon-rain"></i></h6>
-                          <h6 id="day4Temp" class="card-subtitle mb-4">Temp: </h6>
-                          <h6 id="day4Humi" class="card-subtitle mb-4">Humidity: </h6>
+                          <h6 id="day4Date" class="card-title mb-4"></h6>
+                          <p id="day4Icon" class="card-subtitle mb-4"></p>
+                          <p id="day4Temp" class="card-subtitle mb-4">Temp: </p>
+                          <p id="day4Humi" class="card-subtitle mb-4">Humidity: </p>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
-                          <h5 id="day5Date" class="card-title mb-4"></h5>
-                          <h6 id="day5Icon" class="card-subtitle mb-4"><i class="fas fa-cloud-moon-rain"></i></h6>
-                          <h6 id="day5Temp" class="card-subtitle mb-4">Temp: </h6>
-                          <h6 id="day5Humi" class="card-subtitle mb-4">Humidity: </h6>
+                          <h6 id="day5Date" class="card-title mb-4"></h6>
+                          <p id="day5Icon" class="card-subtitle mb-4"></p>
+                          <p id="day5Temp" class="card-subtitle mb-4">Temp: </p>
+                          <p id="day5Humi" class="card-subtitle mb-4">Humidity: </p>
                         </div>
                       </div>
                 </div>
