buttons now add for searched cities

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title" id="selectedCity">Lehi</h5>
+                      <h5 class="card-title" id="selectedCity"></h5>
                       <h6 id="temp" class="card-subtitle mt-5 mb-2">
                         Temperature:
                       </h6>
@@ -96,7 +96,7 @@
                   <h5 class="mt-3">5-Day Forecast:</h5>
                 </div>
               </div>
-              <div id="5Day" class="row">
+              <div id="5Day" class="row d-none">
                 <div class="col">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
