updated readme and working on making page mobile ready

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4">
             <aside>
               <div class="container">
                 <div class="row">
@@ -69,7 +69,7 @@
             </aside>
           </div>
           <div class="col-8">
-            <section>
+            <section class="container">
               <div class="row">
                 <div class="col">
                   <div class="card">
@@ -97,8 +97,8 @@
                 </div>
               </div>
               <div id="5Day" class="row d-none">
-                <div class="col">
-                    <div class="card text-white bg-primary">
+                <div class="col-sm">
+                    <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day1Date" class="card-title mb-4"></h6>
                           <p id="day1Icon" class="card-subtitle mb-4"></p>
@@ -107,8 +107,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col">
-                    <div class="card text-white bg-primary">
+                <div class="col-sm">
+                    <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day2Date" class="card-title mb-4"></h6>
                           <p id="day2Icon" class="card-subtitle mb-4"></p>
@@ -117,8 +117,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col">
-                    <div class="card text-white bg-primary">
+                <div class="col-sm">
+                    <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day3Date" class="card-title mb-4"></h6>
                           <p id="day3Icon" class="card-subtitle mb-4"></p>
@@ -127,8 +127,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col">
-                    <div class="card text-white bg-primary">
+                <div class="col-sm">
+                    <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day4Date" class="card-title mb-4"></h6>
                           <p id="day4Icon" class="card-subtitle mb-4"></p>
@@ -137,8 +137,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="col">
-                    <div class="card text-white bg-primary">
+                <div class="col-sm">
+                    <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day5Date" class="card-title mb-4"></h6>
                           <p id="day5Icon" class="card-subtitle mb-4"></p>
