added some comments for html so I know where the current weather data is added and where saved cities are displayed

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   </div>
                 </div>
                 <div class="row mt-4">
-                  <div class="col-10" id="savedCities"></div>
+                  <div class="col-10" id="savedCities"><!-- saved cities are populated here by the script file --></div>
                 </div>
               </div>
             </aside>
@@ -76,15 +76,19 @@
                     <div class="card-body">
                       <h5 class="card-title" id="selectedCity"></h5>
                       <h6 id="temp" class="card-subtitle mt-5 mb-2">
+                          <!-- current Temperature for selected city -->
                         Temperature:
                       </h6>
                       <h6 id="humi" class="card-subtitle mt-3 mb-2">
+                          <!-- current Humidity for selected city -->
                         Humidity:
                       </h6>
                       <h6 id="wind" class="card-subtitle mt-3 mb-2">
+                          <!-- current Wind Speed for selected city -->
                         Wind Speed:
                       </h6>
                       <h6 id="uvin" class="card-subtitle mt-3 mb-2">
+                          <!-- current UV Index for selected city -->
                         UV Index:
                       </h6>
                     </div>
