updated html breakpoints to be more mobile friendly

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-12">
             <aside>
               <div class="container">
                 <div class="row">
@@ -68,7 +68,7 @@
               </div>
             </aside>
           </div>
-          <div class="col-8">
+          <div class="col-lg-8 col-md-12">
             <section class="container">
               <div class="row">
                 <div class="col">
@@ -101,7 +101,7 @@
                 </div>
               </div>
               <div id="5Day" class="row d-none">
-                <div class="col-sm">
+                <div class="col-xl col-lg-4 col-md-6 col-sm-12">
                     <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day1Date" class="card-title mb-4"></h6>
@@ -111,7 +111,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-xl col-lg-4 col-md-6 col-sm-12">
                     <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day2Date" class="card-title mb-4"></h6>
@@ -121,7 +121,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-xl col-lg-4 col-md-6 col-sm-12">
                     <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day3Date" class="card-title mb-4"></h6>
@@ -131,7 +131,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-xl col-lg-4 col-md-6 col-sm-12">
                     <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day4Date" class="card-title mb-4"></h6>
@@ -141,7 +141,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-xl col-lg-4 col-md-6 col-sm-12">
                     <div class="card text-white bg-primary mt-3">
                         <div class="card-body">
                           <h6 id="day5Date" class="card-title mb-4"></h6>
