added background color to current weather card to make the weather icon more easy to distinguish

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="row">
                 <div class="col">
                   <div class="card">
-                    <div class="card-body">
+                    <div class="card-body bg-info">
                       <h5 class="card-title" id="selectedCity"></h5>
                       <h6 id="temp" class="card-subtitle mt-5 mb-2">
                           <!-- current Temperature for selected city -->
